fix: polish responsive layout and container spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,6 +39,7 @@ hr {
   width: 100%;
   max-width: 1200px;
   margin: 0 auto;
+  padding: 0 15px;
 }
 
 /* Intro */
@@ -48,9 +49,11 @@ hr {
   justify-content: center;
   width: 100%;
   height: 100vh;
+  min-height: 820px;
   background: url('../images/intro.jpg') center, no-repeat;
   -webkit-background-size: cover;
   background-size: cover;
+  position: relative;
 }
 .intro__inner {
   width: 100%;
@@ -90,6 +93,20 @@ hr {
   right: 0;
   z-index: 1000;
   padding-top: 30px;
+}
+
+.header.fixed {
+  background-color: #eb8b8d;
+  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  transform: translate3d(0, 0, 0);
+}
+
+.header.active {
+  background-color: #eb8b8d;
 }
 
 .header__inner {
@@ -139,6 +156,72 @@ hr {
 .nav__link:hover:after,
 .nav__link.active:after {
   opacity: 1;
+}
+
+/* Nav toggle */
+.nav-toggle {
+  width: 30px;
+  padding: 10px 0;
+  display: none;
+
+  font-size: 0;
+  color: transparent;
+  border: 0;
+  background: none;
+  cursor: pointer;
+
+  position: absolute;
+  top: 25px;
+  right: 25px;
+  z-index: 1;
+}
+.nav-toggle.active .nav-toggle__item {
+  background: none;
+}
+
+.nav-toggle.active .nav-toggle__item:before {
+  transform-origin: left top;
+  transform: rotate(45deg) translate3d(0px, -2px, 0);
+}
+
+.nav-toggle.active .nav-toggle__item:after {
+  transform-origin: left bottom;
+  transform: rotate(-45deg) translate3d(0px, 3px, 0);
+}
+
+.nav-toggle__item {
+  display: block;
+  width: 100%;
+  height: 3px;
+  background-color: #fff;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  margin: auto;
+  transition: transform 0.2s linear;
+}
+
+.nav-toggle__item:before,
+.nav-toggle__item:after {
+  content: '';
+  width: 100%;
+  height: 3px;
+  background-color: #fff;
+  position: absolute;
+  left: 0;
+  z-index: 1;
+
+  transition: background 0.2s linear;
+}
+
+.nav-toggle__item:before {
+  top: -8px;
+}
+
+.nav-toggle__item:after {
+  bottom: -8px;
 }
 
 /* Button */
@@ -1174,9 +1257,34 @@ hr {
 }
 
 @media (max-width: 770px) {
+  /* Intro*/
+  .intro {
+    min-height: 650px;
+  }
+
+  /* Header */
+  .header {
+    padding: 10px 0;
+  }
+
   /* Nav */
   .nav {
     display: none;
+
+    position: absolute;
+    top: 100%;
+    left: 0;
+    background-color: #eb8b8d;
+    width: 100%;
+  }
+
+  .nav__link {
+    display: block;
+    margin: 0;
+    padding: 8px 20px;
+  }
+  .nav-toggle {
+    display: block;
   }
 
   /*Section */
